--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
     <div id="banner" class="bannerDiv">
         <h1>
-            <b><i>data science for social good!</i></b>
+            <b><i>data science for good!</i></b>
         </h1>
         <div id="navbar">
-            <a href="info.html"><div id="nav-bg"><div id="nav-text">projects</div></div></a>
-            <a href="projects.html"><div id="nav-bg"><div id="nav-text">people</div></div></a>
+            <a href="info.html"><div id="nav-bg"><div id="nav-text">info</div></div></a>
+            <a href="projects.html"><div id="nav-bg"><div id="nav-text">projects</div></div></a>
             <a href="join.html"><div id="nav-bg"><div id="nav-text">join</div></div></a>
         </div>
     </div>
@@ -37,7 +37,7 @@
 
     <div id="content">
         <p>
-            activist.ai is a way for software engineers, data scientists, and researchers to discover socially conscious projects to volunteer for.
+            We are building a way for software engineers, data scientists, and researchers to discover socially conscious projects to volunteer for.
         </p>
     </div>
 </body>
