--- a/join.html
+++ b/join.html
@@ -36,7 +36,7 @@
 
     <div id="content">
         <p>
-            activist.ai is a way for software engineers, data scientists, and researchers to discover socially conscious projects to volunteer for.
+            We are building a way for software engineers, data scientists, and researchers to discover socially conscious projects to volunteer for.
         </p>
     </div>
 
