--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
             <b><i>data science for good!</i></b>
         </h1>
         <div id="navbar">
-            <a href="info.html"><div id="nav-bg"><div id="nav-text">info</div></div></a>
+            <a href="index.html"><div id="nav-bg"><div id="nav-text">info</div></div></a>
             <div id="nav-fg"><div id="nav-text">projects</div></div>
             <a href="join.html"><div id="nav-bg"><div id="nav-text">join</div></div></a>
         </div>
