--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <b><i>data science for good!</i></b>
         </h1>
         <div id="navbar">
-            <div id="nav-bg"><div id="nav-text">info</div></div>
+            <div id="nav-fg"><div id="nav-text">info</div></div>
             <a href="projects.html"><div id="nav-bg"><div id="nav-text">projects</div></div></a>
             <a href="join.html"><div id="nav-bg"><div id="nav-text">join</div></div></a>
         </div>
