--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Activist Home</title>
+  <title>Activist AI</title>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
 </head>
