Added text and links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
 
     <div id="content">
         <p>
-            We are building a way for software engineers, data scientists, and researchers to discover socially conscious projects to volunteer for.
+            We are building a new way for software engineers, data scientists, and researchers to discover socially conscious projects to volunteer for.
+        </p>
+        <p>
+            Since we're just getting started, we are not currently accepting donations. If you'd like to help out, <a href='mailto: activist.ai.dev@gmail.com'>email us</a>.
+        </p>
+        <p>
+            Check back soon for updates! We're excited to start bringing people together.
         </p>
     </div>
 </body>
