--- a/join.html
+++ b/join.html
@@ -36,8 +36,18 @@
 
     <div id="content">
         <p>
-            We are building a way for software engineers, data scientists, and researchers to discover socially conscious projects to volunteer for.
+            Join the activist.ai network!
         </p>
+        <p>
+            Are you a data specialist looking to use your skills for social good?
+            <br>
+            > Sign up for our <a href="">mailing list</a>.
+        </p>
+        <p>
+            Are you an activist hoping to develop a data-centric project?
+            <br>
+            > Submit a project proposal <a href="">here</a>.
+        </a>
     </div>
 
 </body>
