--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
 
     <div id="content">
         <p>
-            We are building a way for software engineers, data scientists, and researchers to discover socially conscious projects to volunteer for.
+            For now, your best bet to find projects is... <a href="https://www.google.com/search?q=data+science+for+social+good">google</a>.
         </p>
     </div>
 
