--- a/join.html
+++ b/join.html
@@ -41,12 +41,12 @@
         <p>
             Are you a data specialist looking to use your skills for social good?
             <br>
-            > Sign up for our <a href="">mailing list</a>.
+            Sign up for our <a href="">mailing list</a>.
         </p>
         <p>
             Are you an activist hoping to develop a data-centric project?
             <br>
-            > Submit a project proposal <a href="">here</a>.
+            Submit a project proposal <a href="">here</a>.
         </a>
     </div>
 
