--- a/join.html
+++ b/join.html
@@ -46,7 +46,7 @@
         <p>
             Are you an activist hoping to develop a data-centric project?
             <br>
-            Submit a project proposal <a href="">here</a>.
+            Submit a project proposal <a href="mailto: activist.ai.dev@gmail.com">here</a>.
         </a>
     </div>
 
