--- a/join.html
+++ b/join.html
@@ -35,19 +35,25 @@
     </script>
 
     <div id="content">
+
         <p>
             Join the activist.ai network!
         </p>
+
         <p>
-            Are you a data specialist looking to use your skills for social good?
-            <br>
-            Sign up for our <a href="">mailing list</a>.
+            <div style="margin-bottom: 5px;">Are you a data specialist looking to volunteer your expertise for social good?</div>
+            <div><i>Sign up for our <a href="">mailing list</a>.</i></div>
         </p>
+
         <p>
-            Are you an activist hoping to develop a data-centric project?
-            <br>
-            Submit a project proposal <a href="mailto: activist.ai.dev@gmail.com">here</a>.
-        </a>
+            <div style="margin-bottom: 5px;">Are you an activist developing a data-centric project? Or do you have an incredible idea?</div>
+            <div><i>Submit a project proposal <a href="mailto: activist.ai.dev@gmail.com">here</a>.</i></div>
+        </p>
+
+        <p>
+            <div style="margin-bottom: 5px;">Are you a passionate and civically-minded person hoping to grow your skills while helping your cause?</div>
+            <div><i>Dive into a <a href="projects.html">project</a> or learn about <a href="https://towardsdatascience.com/">data science</a>.</i>
+        </p>
     </div>
 
 </body>
